--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2215,6 +2215,267 @@ input, select, textarea {
 
 		}
 
+
+
+
+
+
+/* features2 */
+
+.features2 {
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    border-radius: 0.25em;
+    border: solid 1px rgba(255, 255, 255, 0.15);
+    background: rgba(255, 255, 255, 0.05);
+    margin: 0 0 2em 0;
+}
+
+    .features2 section {
+        padding: 3.5em 3em 1em 7em ;
+        width: 50%;
+        border-top: solid 1px rgba(255, 255, 255, 0.15);
+        position: relative;
+    }
+
+        .features2 section:nth-child(-n + 2) {
+            border-top-width: 0;
+        }
+
+        .features2 section:nth-child(2n) {
+            border-left: solid 1px rgba(255, 255, 255, 0.15);
+        }
+
+        .features2 section .icon {
+            -moz-transition: opacity 0.5s ease, -moz-transform 0.5s ease;
+            -webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease;
+            -ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease;
+            transition: opacity 0.5s ease, transform 0.5s ease;
+            -moz-transition-delay: 1s;
+            -webkit-transition-delay: 1s;
+            -ms-transition-delay: 1s;
+            transition-delay: 1s;
+            -moz-transform: scale(1);
+            -webkit-transform: scale(1);
+            -ms-transform: scale(1);
+            transform: scale(1);
+            position: absolute;
+            left: 3em;
+            top: 3em;
+            opacity: 1;
+        }
+
+        .features2 section:nth-child(1) .icon {
+            -moz-transition-delay: 0.15s;
+            -webkit-transition-delay: 0.15s;
+            -ms-transition-delay: 0.15s;
+            transition-delay: 0.15s;
+        }
+
+        .features2 section:nth-child(2) .icon {
+            -moz-transition-delay: 0.3s;
+            -webkit-transition-delay: 0.3s;
+            -ms-transition-delay: 0.3s;
+            transition-delay: 0.3s;
+        }
+
+        .features2 section:nth-child(3) .icon {
+            -moz-transition-delay: 0.45s;
+            -webkit-transition-delay: 0.45s;
+            -ms-transition-delay: 0.45s;
+            transition-delay: 0.45s;
+        }
+
+        .features2 section:nth-child(4) .icon {
+            -moz-transition-delay: 0.6s;
+            -webkit-transition-delay: 0.6s;
+            -ms-transition-delay: 0.6s;
+            transition-delay: 0.6s;
+        }
+
+        .features2 section:nth-child(5) .icon {
+            -moz-transition-delay: 0.75s;
+            -webkit-transition-delay: 0.75s;
+            -ms-transition-delay: 0.75s;
+            transition-delay: 0.75s;
+        }
+
+        .features2 section:nth-child(6) .icon {
+            -moz-transition-delay: 0.9s;
+            -webkit-transition-delay: 0.9s;
+            -ms-transition-delay: 0.9s;
+            transition-delay: 0.9s;
+        }
+
+        .features2 section:nth-child(7) .icon {
+            -moz-transition-delay: 1.05s;
+            -webkit-transition-delay: 1.05s;
+            -ms-transition-delay: 1.05s;
+            transition-delay: 1.05s;
+        }
+
+        .features2 section:nth-child(8) .icon {
+            -moz-transition-delay: 1.2s;
+            -webkit-transition-delay: 1.2s;
+            -ms-transition-delay: 1.2s;
+            transition-delay: 1.2s;
+        }
+
+        .features2 section:nth-child(9) .icon {
+            -moz-transition-delay: 1.35s;
+            -webkit-transition-delay: 1.35s;
+            -ms-transition-delay: 1.35s;
+            transition-delay: 1.35s;
+        }
+
+        .features2 section:nth-child(10) .icon {
+            -moz-transition-delay: 1.5s;
+            -webkit-transition-delay: 1.5s;
+            -ms-transition-delay: 1.5s;
+            transition-delay: 1.5s;
+        }
+
+        .features2 section:nth-child(11) .icon {
+            -moz-transition-delay: 1.65s;
+            -webkit-transition-delay: 1.65s;
+            -ms-transition-delay: 1.65s;
+            transition-delay: 1.65s;
+        }
+
+        .features2 section:nth-child(12) .icon {
+            -moz-transition-delay: 1.8s;
+            -webkit-transition-delay: 1.8s;
+            -ms-transition-delay: 1.8s;
+            transition-delay: 1.8s;
+        }
+
+        .features2 section:nth-child(13) .icon {
+            -moz-transition-delay: 1.95s;
+            -webkit-transition-delay: 1.95s;
+            -ms-transition-delay: 1.95s;
+            transition-delay: 1.95s;
+        }
+
+        .features2 section:nth-child(14) .icon {
+            -moz-transition-delay: 2.1s;
+            -webkit-transition-delay: 2.1s;
+            -ms-transition-delay: 2.1s;
+            transition-delay: 2.1s;
+        }
+
+        .features2 section:nth-child(15) .icon {
+            -moz-transition-delay: 2.25s;
+            -webkit-transition-delay: 2.25s;
+            -ms-transition-delay: 2.25s;
+            transition-delay: 2.25s;
+        }
+
+        .features2 section:nth-child(16) .icon {
+            -moz-transition-delay: 2.4s;
+            -webkit-transition-delay: 2.4s;
+            -ms-transition-delay: 2.4s;
+            transition-delay: 2.4s;
+        }
+
+        .features2 section:nth-child(17) .icon {
+            -moz-transition-delay: 2.55s;
+            -webkit-transition-delay: 2.55s;
+            -ms-transition-delay: 2.55s;
+            transition-delay: 2.55s;
+        }
+
+        .features2 section:nth-child(18) .icon {
+            -moz-transition-delay: 2.7s;
+            -webkit-transition-delay: 2.7s;
+            -ms-transition-delay: 2.7s;
+            transition-delay: 2.7s;
+        }
+
+        .features2 section:nth-child(19) .icon {
+            -moz-transition-delay: 2.85s;
+            -webkit-transition-delay: 2.85s;
+            -ms-transition-delay: 2.85s;
+            transition-delay: 2.85s;
+        }
+
+        .features2 section:nth-child(20) .icon {
+            -moz-transition-delay: 3s;
+            -webkit-transition-delay: 3s;
+            -ms-transition-delay: 3s;
+            transition-delay: 3s;
+        }
+
+    .features2.inactive section .icon {
+        -moz-transform: scale(0.5);
+        -webkit-transform: scale(0.5);
+        -ms-transform: scale(0.5);
+        transform: scale(0.5);
+        opacity: 0;
+    }
+
+    @media screen and (max-width: 980px) {
+
+        .features2 {
+            display: block;
+        }
+
+            .features2 section {
+                border-top-width: 1px !important;
+                border-left-width: 0 !important;
+                width: 100%;
+            }
+
+                .features2 section:first-child {
+                    border-top-width: 0 !important;
+                }
+
+    }
+
+    @media screen and (max-width: 736px) {
+
+        .features2 section {
+            padding: 2.5em 1.5em 0.1em 5.5em ;
+        }
+
+            .features2 section .icon {
+                left: 1.5em;
+                top: 2em;
+            }
+
+    }
+
+    @media screen and (max-width: 480px) {
+
+        .features2 section {
+            padding: 2em 1.5em 0.1em 1.5em ;
+        }
+
+            .features2 section .icon {
+                left: 0;
+                position: relative;
+                top: 0;
+            }
+
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Form */
 
 	form {
@@ -3727,6 +3988,189 @@ input, select, textarea {
 		body.is-preload .wrapper.fade > .inner {
 			opacity: 0;
 		}
+
+
+
+
+/* wrapper2 */
+
+.wrapper2 {
+    position: relative;
+}
+
+    .wrapper2 > .inner {
+        padding: 5em 5em 3em 5em ;
+        max-width: 100%;
+        width: 100%;
+    }
+
+        @media screen and (max-width: 1680px) {
+
+            .wrapper2 > .inner {
+                padding: 4em 4em 2em 4em ;
+            }
+
+        }
+
+        @media screen and (max-width: 1280px) {
+
+            .wrapper2 > .inner {
+                width: 100%;
+            }
+
+        }
+
+        @media screen and (max-width: 736px) {
+
+            .wrapper2 > .inner {
+                padding: 3em 2em 1em 2em ;
+            }
+
+        }
+
+    .wrapper2.alt {
+        background-color: #261c3e;
+    }
+
+    .wrapper2.style1 {
+        background-color: #5e42a6;
+    }
+
+    .wrapper2.style1-alt {
+        background-color: #493382;
+    }
+
+    .wrapper2.style2 {
+        background-color: #5052b5;
+    }
+
+    .wrapper2.style2-alt {
+        background-color: #3e4094;
+    }
+
+    .wrapper2.style3 {
+        background-color: #b74e91;
+    }
+
+    .wrapper2.style3-alt {
+        background-color: #953d75;
+    }
+
+    .wrapper2.fullscreen {
+        display: -moz-flex;
+        display: -webkit-flex;
+        display: -ms-flex;
+        display: flex;
+        -moz-flex-direction: column;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -moz-justify-content: center;
+        -webkit-justify-content: center;
+        -ms-justify-content: center;
+        justify-content: center;
+        min-height: 100vh;
+    }
+
+        body.is-ie .wrapper2.fullscreen {
+            height: 100vh;
+        }
+
+        @media screen and (max-width: 1280px) {
+
+            .wrapper2.fullscreen {
+                min-height: calc(100vh - 2.5em);
+            }
+
+                body.is-ie .wrapper2.fullscreen {
+                    height: calc(100vh - 2.5em);
+                }
+
+        }
+
+        @media screen and (max-width: 736px) {
+
+            .wrapper2.fullscreen {
+                padding: 2em 0;
+                min-height: 0;
+            }
+
+                body.is-ie .wrapper2.fullscreen {
+                    height: auto;
+                }
+
+        }
+
+    .wrapper2.fade-up > .inner {
+        -moz-transform: translateY(0);
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        transform: translateY(0);
+        -moz-transition: opacity 1s ease, -moz-transform 1s ease;
+        -webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
+        -ms-transition: opacity 1s ease, -ms-transform 1s ease;
+        transition: opacity 1s ease, transform 1s ease;
+        opacity: 1.0;
+    }
+
+    .wrapper2.fade-up.inactive > .inner,
+    body.is-preload .wrapper2.fade-up > .inner {
+        opacity: 0;
+        -moz-transform: translateY(1em);
+        -webkit-transform: translateY(1em);
+        -ms-transform: translateY(1em);
+        transform: translateY(1em);
+    }
+
+    .wrapper2.fade-down > .inner {
+        -moz-transform: translateY(0);
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        transform: translateY(0);
+        -moz-transition: opacity 1s ease, -moz-transform 1s ease;
+        -webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
+        -ms-transition: opacity 1s ease, -ms-transform 1s ease;
+        transition: opacity 1s ease, transform 1s ease;
+        opacity: 1.0;
+    }
+
+    .wrapper2.fade-down.inactive > .inner,
+    body.is-preload .wrapper2.fade-down > .inner {
+        opacity: 0;
+        -moz-transform: translateY(-1em);
+        -webkit-transform: translateY(-1em);
+        -ms-transform: translateY(-1em);
+        transform: translateY(-1em);
+    }
+
+    .wrapper2.fade > .inner {
+        -moz-transition: opacity 1s ease;
+        -webkit-transition: opacity 1s ease;
+        -ms-transition: opacity 1s ease;
+        transition: opacity 1s ease;
+        opacity: 1.0;
+    }
+
+    .wrapper2.fade.inactive > .inner,
+    body.is-preload .wrapper2.fade > .inner {
+        opacity: 0;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Header */
 
